# pykefcontrol

./: .gitignore  CLAUDE.md  LICENSE  README.md  apk_analysis.md  apk_analysis.py  flake.nix  pyproject.toml  requirements.txt  setup.py  testing.ipynb  testing.py  testing_reqs.txt
pykefcontrol/: __init__.py  kef_connector.py  profile_manager.py
tests/: test_kef_connector.py
