[project]
name = "pykefcontrol"
version = "0.8"
description = "Python library for controling KEF speakers (LS50W2, LSX2, LS60). It supports basic commands for setting the volume, the source, and getting the media playing informations."
authors = [{ name = "Robin Dupont", email = "robin.dpnt@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "Kef",
    "KEF",
    "Speaker",
    "LS50",
    "LS50W2",
    "Wireless II",
    "Wireless 2",
    "LSX",
    "LSX2",
    "LS60",
    "LS60W",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.7.4",
    "requests>=2.26.0",
]

[project.urls]
Homepage = "https://github.com/rodupont/pykefcontrol"
Repository = "https://github.com/rodupont/pykefcontrol"

[dependency-groups]
dev = ["jupyterlab>=4.1.0,<5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
